@@ -1,7 +1,8 @@
 
 package eu.dnetlib.dhp.collection.plugin.oai;
 
-import java.io.StringReader;
+import java.io.IOException;
+import java.io.StringWriter;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.util.Iterator;
@@ -9,24 +10,28 @@ import java.util.Queue;
 import java.util.concurrent.PriorityBlockingQueue;
 
 import org.apache.commons.lang.StringUtils;
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
 import org.dom4j.Document;
 import org.dom4j.DocumentException;
+import org.dom4j.DocumentHelper;
 import org.dom4j.Node;
-import org.dom4j.io.SAXReader;
+import org.dom4j.io.OutputFormat;
+import org.dom4j.io.XMLWriter;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-import eu.dnetlib.dhp.collection.worker.DnetCollectorException;
-import eu.dnetlib.dhp.collection.worker.utils.HttpConnector;
-import eu.dnetlib.dhp.collection.worker.utils.XmlCleaner;
+import eu.dnetlib.dhp.collection.plugin.utils.XmlCleaner;
+import eu.dnetlib.dhp.common.aggregation.AggregatorReport;
+import eu.dnetlib.dhp.common.collection.CollectorException;
+import eu.dnetlib.dhp.common.collection.HttpConnector2;
 
 public class OaiIterator implements Iterator<String> {
 
-	private static final Log log = LogFactory.getLog(OaiIterator.class); // NOPMD by marko on
-	// 11/24/08 5:02 PM
+	private static final Logger log = LoggerFactory.getLogger(OaiIterator.class);
+
+	private static final String REPORT_PREFIX = "oai:";
+	public static final String UTF_8 = "UTF-8";
 
 	private final Queue<String> queue = new PriorityBlockingQueue<>();
-	private final SAXReader reader = new SAXReader();
 
 	private final String baseUrl;
 	private final String set;
@@ -35,7 +40,8 @@ public class OaiIterator implements Iterator<String> {
 	private final String untilDate;
 	private String token;
 	private boolean started;
-	private final HttpConnector httpConnector;
+	private final HttpConnector2 httpConnector;
+	private final AggregatorReport report;
 
 	public OaiIterator(
 		final String baseUrl,
@@ -43,7 +49,8 @@ public class OaiIterator implements Iterator<String> {
 		final String set,
 		final String fromDate,
 		final String untilDate,
-		final HttpConnector httpConnector) {
+		final HttpConnector2 httpConnector,
+		final AggregatorReport report) {
 		this.baseUrl = baseUrl;
 		this.mdFormat = mdFormat;
 		this.set = set;
@@ -51,6 +58,7 @@ public class OaiIterator implements Iterator<String> {
 		this.untilDate = untilDate;
 		this.started = false;
 		this.httpConnector = httpConnector;
+		this.report = report;
 	}
 
 	private void verifyStarted() {
@@ -58,8 +66,8 @@ public class OaiIterator implements Iterator<String> {
 			this.started = true;
 			try {
 				this.token = firstPage();
-			} catch (final DnetCollectorException e) {
-				throw new RuntimeException(e);
+			} catch (final CollectorException e) {
+				throw new IllegalStateException(e);
 			}
 		}
 	}
@@ -80,8 +88,8 @@ public class OaiIterator implements Iterator<String> {
 			while (queue.isEmpty() && token != null && !token.isEmpty()) {
 				try {
 					token = otherPages(token);
-				} catch (final DnetCollectorException e) {
-					throw new RuntimeException(e);
+				} catch (final CollectorException e) {
+					throw new IllegalStateException(e);
 				}
 			}
 			return res;
@@ -90,25 +98,29 @@ public class OaiIterator implements Iterator<String> {
 
 	@Override
 	public void remove() {
+		throw new UnsupportedOperationException();
 	}
 
-	private String firstPage() throws DnetCollectorException {
+	private String firstPage() throws CollectorException {
 		try {
-			String url = baseUrl + "?verb=ListRecords&metadataPrefix=" + URLEncoder.encode(mdFormat, "UTF-8");
+			String url = baseUrl + "?verb=ListRecords&metadataPrefix=" + URLEncoder.encode(mdFormat, UTF_8);
 			if (set != null && !set.isEmpty()) {
-				url += "&set=" + URLEncoder.encode(set, "UTF-8");
+				url += "&set=" + URLEncoder.encode(set, UTF_8);
 			}
-			if (fromDate != null && fromDate.matches("\\d{4}-\\d{2}-\\d{2}")) {
-				url += "&from=" + URLEncoder.encode(fromDate, "UTF-8");
+			if (fromDate != null && (fromDate.matches(OaiCollectorPlugin.DATE_REGEX)
+				|| fromDate.matches(OaiCollectorPlugin.UTC_DATETIME_REGEX))) {
+				url += "&from=" + URLEncoder.encode(fromDate, UTF_8);
 			}
-			if (untilDate != null && untilDate.matches("\\d{4}-\\d{2}-\\d{2}")) {
-				url += "&until=" + URLEncoder.encode(untilDate, "UTF-8");
+			if (untilDate != null && (untilDate.matches(OaiCollectorPlugin.DATE_REGEX)
+				|| untilDate.matches(OaiCollectorPlugin.UTC_DATETIME_REGEX))) {
+				url += "&until=" + URLEncoder.encode(untilDate, UTF_8);
 			}
-			log.info("Start harvesting using url: " + url);
+			log.info("Start harvesting using url: {}", url);
 
 			return downloadPage(url);
 		} catch (final UnsupportedEncodingException e) {
-			throw new DnetCollectorException(e);
+			report.put(e.getClass().getName(), e.getMessage());
+			throw new CollectorException(e);
 		}
 	}
 
@@ -126,32 +138,35 @@ public class OaiIterator implements Iterator<String> {
 		return result.trim();
 	}
 
-	private String otherPages(final String resumptionToken) throws DnetCollectorException {
+	private String otherPages(final String resumptionToken) throws CollectorException {
 		try {
 			return downloadPage(
 				baseUrl
 					+ "?verb=ListRecords&resumptionToken="
-					+ URLEncoder.encode(resumptionToken, "UTF-8"));
+					+ URLEncoder.encode(resumptionToken, UTF_8));
 		} catch (final UnsupportedEncodingException e) {
-			throw new DnetCollectorException(e);
+			report.put(e.getClass().getName(), e.getMessage());
+			throw new CollectorException(e);
 		}
 	}
 
-	private String downloadPage(final String url) throws DnetCollectorException {
+	private String downloadPage(final String url) throws CollectorException {
 
-		final String xml = httpConnector.getInputSource(url);
+		final String xml = httpConnector.getInputSource(url, report);
 		Document doc;
 		try {
-			doc = reader.read(new StringReader(xml));
+			doc = DocumentHelper.parseText(xml);
 		} catch (final DocumentException e) {
-			log.warn("Error parsing xml, I try to clean it: " + xml, e);
+			log.warn("Error parsing xml, I try to clean it. {}", e.getMessage());
+			report.put(e.getClass().getName(), e.getMessage());
 			final String cleaned = XmlCleaner.cleanAllEntities(xml);
 			try {
-				doc = reader.read(new StringReader(cleaned));
+				doc = DocumentHelper.parseText(cleaned);
 			} catch (final DocumentException e1) {
 				final String resumptionToken = extractResumptionToken(xml);
 				if (resumptionToken == null) {
-					throw new DnetCollectorException("Error parsing cleaned document:" + cleaned, e1);
+					report.put(e1.getClass().getName(), e1.getMessage());
+					throw new CollectorException("Error parsing cleaned document:\n" + cleaned, e1);
 				}
 				return resumptionToken;
 			}
@@ -159,19 +174,35 @@ public class OaiIterator implements Iterator<String> {
 
 		final Node errorNode = doc.selectSingleNode("/*[local-name()='OAI-PMH']/*[local-name()='error']");
 		if (errorNode != null) {
-			final String code = errorNode.valueOf("@code");
-			if ("noRecordsMatch".equalsIgnoreCase(code.trim())) {
-				log.warn("noRecordsMatch for oai call: " + url);
+			final String code = errorNode.valueOf("@code").trim();
+			if ("noRecordsMatch".equalsIgnoreCase(code)) {
+				final String msg = "noRecordsMatch for oai call : " + url;
+				log.warn(msg);
+				report.put(REPORT_PREFIX + code, msg);
 				return null;
 			} else {
-				throw new DnetCollectorException(code + " - " + errorNode.getText());
+				final String msg = code + " - " + errorNode.getText();
+				report.put(REPORT_PREFIX + "error", msg);
+				throw new CollectorException(msg);
 			}
 		}
 
 		for (final Object o : doc.selectNodes("//*[local-name()='ListRecords']/*[local-name()='record']")) {
-			queue.add(((Node) o).asXML());
+			final StringWriter sw = new StringWriter();
+			final XMLWriter writer = new XMLWriter(sw, OutputFormat.createPrettyPrint());
+			try {
+				writer.write((Node) o);
+				queue.add(sw.toString());
+			} catch (IOException e) {
+				report.put(e.getClass().getName(), e.getMessage());
+				throw new CollectorException("Error parsing XML record:\n" + ((Node) o).asXML(), e);
+			}
 		}
 
 		return doc.valueOf("//*[local-name()='resumptionToken']");
+	}
+
+	public AggregatorReport getReport() {
+		return report;
 	}
 }
